feat:add about ,text slider and team sections

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Integra Magna</title>
     <link rel="stylesheet" href="/style.css" type="text/css">
-    <link rel="favicon" href="/images/favicon.png" type="image/icon">
+    <link rel="icon" href="/images/icon.png" type="image/icon">
 </head>
 
 <body>
@@ -17,8 +17,10 @@
         <div class="container">
             <div class="header__wrapper">
                 <div class="header__logo">
-                    <img src="/images/favicon.png" alt="Logo of the Integra Magna" class="header__logo-img">
-                    <img src="/images/logo__text.png" alt="Textual logo of the Integra Magna" class="header__logo-img">
+                    <img src="/images/logonameblend.59bbfee6.svg" alt="Logo of the Integra Magna"
+                        class=" header__main-logo header__logo-img">
+                    <img src="/images/blending-logo.8fbd5e08.svg" alt="Textual logo of the Integra Magna"
+                        class=" header__main-logo header__logo-text">
                 </div>
                 <nav class="header__nav">
                     <ul class="header__nav-list">
@@ -46,9 +48,10 @@
                 </div>
                 <div class="hero__image-container">
                     <img src="/images/about-hero-image.webp" alt="Founders Working" class="hero__image">
-                    <div class="hero__circle-dots">
-                        <img src="/images/circlenothhumbsvg.svg" alt="Integra Magna Agency and Community">
-                    </div>
+
+                    <img src="/images/circlenothhumbsvg.svg" alt="Integra Magna Agency and Community"
+                        class="hero__circle-dots">
+
                 </div>
                 <div class="hero__text hero__text--are">
                     <h1 class="hero__heading">Are</h1>
@@ -56,6 +59,7 @@
                 <div class="hero__text hero__text--gritty">
                     <h1 class="hero__heading">Gritty</h1>
                 </div>
+
             </div>
         </div>
     </section>
@@ -81,7 +85,6 @@
                         class="gallery__image--4">
                 </div>
 
-
                 <div class="gallery__item gallery__item--5">
                     <img src="images/image-grid-1.webp" alt="BTS of a product photoshoot" class="gallery__image--5">
                 </div>
@@ -89,6 +92,92 @@
                 <div class="gallery__item gallery__item--6">
                     <img src="images/image-grid-6.webp" alt="Designer working on a laptop with a view"
                         class="gallery__image--6">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- About section -->
+
+    <section class="about">
+        <div class="container">
+            <!-- About text subsection -->
+            <div class="about__text">
+                <p class="about__paragraph">
+                    We are a global strategic design agency that thrives on building brands with powerful conviction.
+                    Collaborating with entrepreneurs, founders, and creators to capitalize their significant business
+                    prospects. Crafting designs: Seen Today and Remembered Forever.
+                </p>
+            </div>
+
+            <!-- About info subsection -->
+            <div class="about__info">
+                <div class="about__info-left">
+                    <h2 class="about__title">About Integra Magna</h2>
+                    <div class="about__circle">
+                        <img src="/images/plus-icon.svg" alt="Plus icon" class="about__icon">
+                    </div>
+                </div>
+                <div class="about__info-right">
+                    <h2 class="about__heading">Rooted in strategy, innovation, ideation and execution</h2>
+                    <p class="about__description">
+                        “ Currently shaping the future of brands for the next generation, through a lens of empathy,
+                        passion, and love for the people that trust us to help tell their stories.
+                    </p>
+                </div>
+            </div>
+
+            <!-- Curved Text Slider Section -->
+            <div class="curved-slider">
+                <div class="curved-slider__text-wrapper">
+                    <p class="curved-slider__text">
+                        Shit-hot work for hot-shot brands • We embrace white space like our best friend • We obsess over
+                        details • Shit-hot work
+                        for hot-shot brands • We embrace white space like our best friend • We obsess over details •
+                        Shit-hot work for hot-shot
+                        brands •
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Team Section -->
+
+    <section class="team">
+        <div class="container">
+            <div class="team__grid">
+                <div class="team__header">
+                    <h2 class="team__header-title">Meet The Founders
+                    </h2>
+                    <p class="team__header-subtitle">Boisterous brilliance meets calm calculation:</p>
+                </div>
+                <div class="team__description">
+                    <h2 class="team__description-title">A story that began with a trip without laptops and sharing bold
+                        dreams.
+                    </h2>
+                    <p class="team__description-subtitle">Boisterous brilliance meets calm calculation:</p>
+                </div>
+                <div class="team__member">
+                    <div class="team__member-image-container">
+                        <img src="images/team-member-1.webp" alt="Team Member" class="team__member-image">
+                    </div>
+                    <h3 class="team__member-name">Jane Doe</h3>
+                    <p class="team__member-position">Creative Director</p>
+                </div>
+                <div class="team__member">
+                    <div class="team__member-image-container">
+                        <img src="images/team-member-2.webp" alt="Team Member" class="team__member-image">
+                    </div>
+                    <h3 class="team__member-name">John Smith</h3>
+                    <p class="team__member-position">Design Lead</p>
+                </div>
+                <div class="team__member">
+                    <div class="team__member-image-container">
+                        <img src="images/team-member-3.webp" alt="Team Member" class="team__member-image">
+                    </div>
+                    <h3 class="team__member-name">Emily Johnson</h3>
+                    <p class="team__member-position">Strategy Director</p>
                 </div>
             </div>
         </div>
