feat: add work, contact and footer sections

--- a/index.html
+++ b/index.html
@@ -126,22 +126,18 @@
                     </p>
                 </div>
             </div>
-
-            <!-- Curved Text Slider Section -->
-            <div class="curved-slider">
-                <div class="curved-slider__text-wrapper">
-                    <p class="curved-slider__text">
-                        Shit-hot work for hot-shot brands • We embrace white space like our best friend • We obsess over
-                        details • Shit-hot work
-                        for hot-shot brands • We embrace white space like our best friend • We obsess over details •
-                        Shit-hot work for hot-shot
-                        brands •
-                    </p>
-                </div>
-            </div>
         </div>
     </section>
-
+    <!-- Curved Text Slider Section -->
+    <section class="curved-slider">
+        <div class="curved-slider__text-wrapper">
+            <p class="curved-slider__text">
+                Shit-hot work for hot-shot brands • We embrace white space like our best friend • We obsess over
+                details • Shit-hot work for hot-shot brands • We embrace white space like our best friend • We obsess
+                over details • Shit-hot work for hot-shot brands •
+            </p>
+        </div>
+    </section>
     <!-- Team Section -->
 
     <section class="team">
@@ -150,38 +146,172 @@
                 <div class="team__header">
                     <h2 class="team__header-title">Meet The Founders
                     </h2>
-                    <p class="team__header-subtitle">Boisterous brilliance meets calm calculation:</p>
+                    <p class="team__subtitle team__header-subtitle">Boisterous brilliance meets calm calculation:</p>
                 </div>
                 <div class="team__description">
                     <h2 class="team__description-title">A story that began with a trip without laptops and sharing bold
                         dreams.
                     </h2>
-                    <p class="team__description-subtitle">Boisterous brilliance meets calm calculation:</p>
+                    <p class=" team__subtitle team__description-subtitle">Back in 2017, the founders packed their dreams
+                        in a shoestring
+                        budget, and dived headfirst into the deep end. They made
+                        the crazy decision to start Integra Magna, facing a ton of skepticism. Too broke, no network,
+                        and not much experience to
+                        succeed in a world with predefined rules for entrepreneurs. Today? That flame's turned into a
+                        full-blown fireworks show!</p>
                 </div>
-                <div class="team__member">
-                    <div class="team__member-image-container">
-                        <img src="images/team-member-1.webp" alt="Team Member" class="team__member-image">
+                <div class="team__founder-misbah">
+                    <div class="team__misbah-witty">
+                        <img src="/images/misbah-witty-sticker.svg" alt="Cool, Stoic and Cerebral">
                     </div>
-                    <h3 class="team__member-name">Jane Doe</h3>
-                    <p class="team__member-position">Creative Director</p>
+                    <div class="founder-misbah">
+                        <img src="/images/misbah-image.png"
+                            alt="Misbah Qureshi Founder Integra Magna and Product Experience Architect">
+                    </div>
+                    <div class="founder__misbah-info">
+                        <div class="founder__misbah-name">
+                            <h2>Misbah <br /> Qureshi</h2>
+                        </div>
+                        <p class="founder__misbah-description">
+                            Co-founder
+                        </p>
+                        <a href="https://www.linkedin.com/in/misbahqr/" target="_blank"
+                            class="founder__misbah-linkedIn">Linkedln →</a>
+                    </div>
                 </div>
-                <div class="team__member">
-                    <div class="team__member-image-container">
-                        <img src="images/team-member-2.webp" alt="Team Member" class="team__member-image">
+                <div class="team__founder-vyanjana">
+                    <div class="team__vyanjana-witty">
+                        <img src="/images/vyanjana-witty-sticker.svg" alt="Witty, Savvy, and Boisterous">
                     </div>
-                    <h3 class="team__member-name">John Smith</h3>
-                    <p class="team__member-position">Design Lead</p>
+                    <div class="founder-vyanjana">
+                        <img src="/images/vyanjana.jpg"
+                            alt="Vyanjana Sharma Founder Integra Magna, Adobe's 1st CC expert in India and Brand Strategist">
+                    </div>
+                    <div class="founder__vyanjana-info">
+                        <div class="founder__vyanjana-name">
+                            <h2>Vyanjana <br /> Sharma</h2>
+                        </div>
+                        <p class="founder__vyanjana-description">
+                            Co-founder
+                        </p>
+                        <a href="https://www.linkedin.com/in/vyanjanas/" target="_blank"
+                            class="founder__vyanjana-linkedIn">Linkedln →</a>
+                    </div>
                 </div>
-                <div class="team__member">
-                    <div class="team__member-image-container">
-                        <img src="images/team-member-3.webp" alt="Team Member" class="team__member-image">
-                    </div>
-                    <h3 class="team__member-name">Emily Johnson</h3>
-                    <p class="team__member-position">Strategy Director</p>
+
+            </div>
+        </div>
+    </section>
+
+
+    <!-- Work Section -->
+    <section class="work-section">
+        <div class="container">
+            <h2 class="work-section__title">Our Code of Awesomeness</h2>
+            <div class="work-grid">
+                <div class="work-item work-item_1">
+                    <img src="/images/image (6).gif" alt="Integra Magna's Client Verticals">
+                </div>
+                <div class="work-item work-item_2">
+                    <img src="/images/image (4).gif" alt="Integra Magna's Team">
+                </div>
+                <div class="work-item work-item_3">
+                    <img src="/images/image (5).gif" alt="Typography">
+                </div>
+                <div class="work-item work-item_4">
+                    <img src="/images/image (2).gif" alt="Countries of Integra Magna's Clients">
+                </div>
+                <div class="work-item work-item_5">
+                    <img src="/images/image (3).gif" alt="Teammates">
+                </div>
+                <div class="work-item work-item_6">
+                    <img src="/images/image (7).gif" alt="Design Tool Icons">
+                </div>
+                <div class="work-item work-item_7">
+                    <img src="/images/image (1).gif" alt="Integra Magna's Conceptual Work">
+                </div>
+                <div class="work-item work-item_8">
+                    <img src="/images/image.gif" alt="Books we recommend for Designers  ">
                 </div>
             </div>
         </div>
     </section>
+
+    <!-- Contact Section -->
+
+    <section class="contact">
+        <div class="container">
+            <div class="contact__content">
+                <p class="contact__intro">Drop us a line or come grab a coffee, it's on us, and let's design the
+                    extraordinary together</p>
+                <div class="contact__form-container">
+                    <div class="contact__form">
+                        <p class="contact__greeting">Hey, I'm <input type="text" class="contact__input"
+                                placeholder="your name"></p>
+                        <p class="contact__greeting"> Let's grab a virtual coffee and chat things out. Reach me back
+                            at<input type="email" class="contact__input" placeholder="your email address"></p>
+                        <p class="contact__greeting">
+                            Here's what I'm thinking:
+                            <textarea class="contact__input"
+                                placeholder="Spill the ink of your mind right here..."></textarea>
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="contact__bottom">
+                <div class="contact__social">
+                    <a href="https://www.instagram.com/integra.magna/" class="social-link" target="_blank">Ig</a>
+                    <a href="https://www.linkedin.com/company/integramagna/" class="social-link" target="_blank">In</a>
+                    <a href="https://twitter.com/Integra_Magna/" class="social-link" target="_blank">X</a>
+                    <a href="https://www.behance.net/integra_magna/" class="social-link" target="_blank">Be</a>
+                </div>
+                <button type="submit" class="contact__submit">Submit</button>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- Footer -->
+
+    <footer class="footer">
+        <div class="container">
+            <div class="footer__content">
+                <div class="footer__background">
+                    <img src="/images/footer-bg-text-desktop.svg" alt="Integra Magna Typography">
+                </div>
+                <div class="footer__center">
+                    <img src="/images/team.webp" alt="Integra Magna Team Building ">
+                </div>
+                <div class="footer__items">
+                    <nav class="footer__nav">
+                        <ul class="footer__nav-list">
+                            <li class="footer__nav-item"><a href="#" class="footer__nav-link">Work</a></li>
+                            <li class="footer__nav-item"><a href="#" class="footer__nav-link">Services</a></li>
+                            <li class="footer__nav-item"><a href="#" class="footer__nav-link">Thinking</a></li>
+                            <li class="footer__nav-item"><a href="#" class="footer__nav-link">Career</a></li>
+                            <li class="footer__nav-item"><a href="#" class="footer__nav-link">About</a></li>
+                            <li class="footer__nav-item"><a href="#" class="footer__nav-link">Contact</a></li>
+                        </ul>
+                    </nav>
+                    <div class="footer__bottom">
+                        <p class="footer__privacy"><a href="https://www.integramagna.com/privacy-policy">Privacy
+                                Policy</a>
+                        </p>
+                        <p class="footer__copyright">Copyright © 2025 Integra Magna</p>
+                    </div>
+                    <div class="footer_back">
+                        <a href="#" class="footer__back-arrow">
+                            <img src="/images/top-arrow.svg" alt="Scroll to top Arrow">
+                            <p class="footer__back-text">Back to top</p>
+                        </a>
+                    </div>
+
+                </div>
+
+            </div>
+        </div>
+    </footer>
+
 </body>
 
 </html>
